Docker file deploy

--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,19 @@
 	</parent>
 	<groupId>br.com.qrmenu</groupId>
 	<artifactId>apiserver</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>apiserver</name>
 	<description>QRMenu Server/RESTful API</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
