--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.11</version>
 		<relativePath/> 
 	</parent>
-	<groupId>br.com.qrmenu</groupId>
-	<artifactId>apiserver</artifactId>
+	<groupId>br.com.torbenishii</groupId>
+	<artifactId>todolist</artifactId>
 	<version>1.0.0</version>
-	<name>apiserver</name>
-	<description>QRMenu Server/RESTful API</description>
+	<name>todolist</name>
+	<description>Gerenciador de tarefas</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
